logs.txt

Traceback (most recent call last):
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\app\main.py", line 205, in _run_ps
    ps.DoJavaScriptFile(run_script_path)
    ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\win32com\client\dynamic.py", line 620, in __getattr__
    ret = self._oleobj_.Invoke(retEntry.dispid, 0, invoke_type, 1)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
pywintypes.com_error: (-2147352567, 'Exception occurred.', (0, 'Adobe Photoshop', 'Illegal argument - argument 1\n- Required value is missing', None, 0, -2147220262), None)

==============================

INFO:     127.0.0.1:55204 - "POST /system/run-builder-script HTTP/1.1" 500 Internal Server Error
WARNING:  StatReload detected changes in 'app\main.py'. Reloading...
 INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [43468]
Process SpawnProcess-2:
Traceback (most recent call last):
  File "multiprocessing\process.py", line 314, in _bootstrap
  File "multiprocessing\process.py", line 108, in run
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\uvicorn\_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\uvicorn\server.py", line 67, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\uvicorn\_compat.py", line 30, in asyncio_run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "asyncio\runners.py", line 118, in run
  File "asyncio\base_events.py", line 654, in run_until_complete
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\uvicorn\server.py", line 71, in serve
    await self._serve(sockets)
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\uvicorn\server.py", line 78, in _serve
    config.load()
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\uvicorn\config.py", line 439, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\python_embed\Lib\site-packages\uvicorn\importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "importlib\__init__.py", line 126, in import_module
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\Bao\Documents\LetakMaster_v1.02\app\main.py", line 264
    finally:
    ^^^^^^^
SyntaxError: invalid syntax